--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbe1b6">  <td>22/01/29 16:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0005_DataDrivenTest_AddNewEmployee.postNewEmployees(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:TestCases.TA0005_DataDrivenTest_AddNewEmployee@305fd85d]">postNewEmployees</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>22/01/29 16:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0005_DataDrivenTest_AddNewEmployee.postNewEmployees(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:TestCases.TA0005_DataDrivenTest_AddNewEmployee@305fd85d]">postNewEmployees</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>22/01/29 16:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0005_DataDrivenTest_AddNewEmployee.postNewEmployees(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:TestCases.TA0005_DataDrivenTest_AddNewEmployee@305fd85d]">postNewEmployees</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>22/01/29 16:44:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0005_DataDrivenTest_AddNewEmployee.postNewEmployees(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:TestCases.TA0005_DataDrivenTest_AddNewEmployee@305fd85d]">postNewEmployees</td> 
-  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="da768f">  <td>22/06/01 20:23:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0008_BasicAuth.auth()[pri:0, instance:TestCases.TC0008_BasicAuth@7671cb68]">auth</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
 </table>
