Added Allure Reporting for Reporting Functionality Fixed: some minor fixes in Testcases

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.restfulbooker.testcases.TC0008_createToken</td>
+<td>com.restfulbooker.testcases.TA0001_GET_getAllBookings</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -50,7 +50,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createToken</td>
+<td>getAllBookingIDs</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
