--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Md Zinnun Uddin\AppData\Local\Temp\testng-eclipse-998886414\testng-customsuite.xml</span>
+                    <span>C:\Users\Md Zinnun Uddin\AppData\Local\Temp\testng-eclipse-1578440302\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,42 +104,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkContentEncoding">checkContentEncoding</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkContentEncoding">checkContentEncoding</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkResponseBody">checkResponseBody</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkResponseBody">checkResponseBody</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkResponseTime">checkResponseTime</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkResponseTime">checkResponseTime</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkServer">checkServer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkServer">checkServer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkStatusCode">checkStatusCode</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkStatusCode">checkStatusCode</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="checkStatusLine">checkStatusLine</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="checkStatusLine">checkStatusLine</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="getAllHeaders">getAllHeaders</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="getAllHeaders">getAllHeaders</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TC0008_createToken" class="method navigator-link" hash-for-method="tearDown">tearDown</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.restfulbooker.testcases.TA0001_GET_getAllBookings" class="method navigator-link" hash-for-method="tearDown">tearDown</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -157,7 +157,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.restfulbooker.testcases.TC0008_createToken</span>
+              <span class="class-name">com.restfulbooker.testcases.TA0001_GET_getAllBookings</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -221,7 +221,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Md Zinnun Uddin\AppData\Local\Temp\testng-eclipse-998886414\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Md Zinnun Uddin\AppData\Local\Temp\testng-eclipse-1578440302\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -230,7 +230,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.restfulbooker.testcases.TC0008_createToken&quot;/&gt;
+      &lt;class name=&quot;com.restfulbooker.testcases.TA0001_GET_getAllBookings&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -273,41 +273,41 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'checkResponseBody')
-data.setCell(0, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(0, 3, 15);
+data.setCell(0, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(0, 3, 9438);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'checkResponseTime')
-data.setCell(1, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(1, 3, 9);
+data.setCell(1, 1, 'checkContentEncoding')
+data.setCell(1, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(1, 3, 71);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'checkContentEncoding')
-data.setCell(2, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(2, 3, 9);
+data.setCell(2, 1, 'checkResponseTime')
+data.setCell(2, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(2, 3, 19);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'getAllHeaders')
-data.setCell(3, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(3, 3, 4);
+data.setCell(3, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(3, 3, 6);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'checkStatusCode')
-data.setCell(4, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(4, 3, 3);
+data.setCell(4, 1, 'checkServer')
+data.setCell(4, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(4, 3, 5);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'checkStatusLine')
-data.setCell(5, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(5, 3, 2);
+data.setCell(5, 1, 'checkStatusCode')
+data.setCell(5, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(5, 3, 4);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'checkServer')
-data.setCell(6, 2, 'com.restfulbooker.testcases.TC0008_createToken')
+data.setCell(6, 1, 'tearDown')
+data.setCell(6, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
 data.setCell(6, 3, 2);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'tearDown')
-data.setCell(7, 2, 'com.restfulbooker.testcases.TC0008_createToken')
-data.setCell(7, 3, 1);
+data.setCell(7, 1, 'checkStatusLine')
+data.setCell(7, 2, 'com.restfulbooker.testcases.TA0001_GET_getAllBookings')
+data.setCell(7, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 ms</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -333,46 +333,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.restfulbooker.testcases.TC0008_createToken</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.restfulbooker.testcases.TA0001_GET_getAllBookings</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
-                <span class="method-name">createToken</span>
-                <span class="method-start">100 ms</span>
+                <span class="method-name">getAllBookingIDs</span>
+                <span class="method-start">115 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">checkContentEncoding</span>
-                <span class="method-start">4123 ms</span>
+                <span class="method-start">8992 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkResponseBody</span>
-                <span class="method-start">4136 ms</span>
+                <span class="method-start">9160 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkResponseTime</span>
-                <span class="method-start">4153 ms</span>
+                <span class="method-start">18602 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkServer</span>
-                <span class="method-start">4164 ms</span>
+                <span class="method-start">18625 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkStatusCode</span>
-                <span class="method-start">4166 ms</span>
+                <span class="method-start">18676 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkStatusLine</span>
-                <span class="method-start">4170 ms</span>
+                <span class="method-start">18682 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getAllHeaders</span>
-                <span class="method-start">4173 ms</span>
+                <span class="method-start">18685 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">4178 ms</span>
+                <span class="method-start">18694 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
